--- a/time.html
+++ b/time.html
@@ -97,7 +97,7 @@
 	}
 	function ddot() {
 		ctx.beginPath();
-		ctx,fillStyle="#fff";
+		ctx.fillStyle="#fff";
 		ctx.arc(0,0,3*rem,0,2*Math.PI,false);
 		ctx.fill();
 	}
