--- a/time.html
+++ b/time.html
@@ -63,10 +63,10 @@
 		var rad=2*Math.PI/12*hour;
 		var mrad=2*Math.PI/12/60*minute;
 		ctx.rotate(rad);
-		ctx.lineWidth=5*rem;
+		ctx.lineWidth=3*rem;
 		ctx.lineCap='round';
 		ctx.moveTo(0,10*rem);
-		ctx.lineTo(0,-r/2*rem);
+		ctx.lineTo(0,-r+50*rem);
 		ctx.stroke();
 		ctx.restore();
 	}
@@ -75,10 +75,10 @@
 		ctx.beginPath();
 		var rad=2*Math.PI/60*minute;
 		ctx.rotate(rad);
-		ctx.lineWidth=3*rem;
+		ctx.lineWidth=6*rem;
 		ctx.lineCap='round';
 		ctx.moveTo(0,10*rem);
-		ctx.lineTo(0,-r+30*rem);
+		ctx.lineTo(0,-r/2*rem+28);
 		ctx.stroke();
 		ctx.restore();
 	}
